fixed plus button overlap with headline in some cases

--- a/assets/css/yir.css
+++ b/assets/css/yir.css
@@ -1506,7 +1506,7 @@ text-shadow: 0px 1px 2px rgba(0,0,0,.5);
 }
 #nav2 .info-headline,
 #nav2 .info-plus {
-    background-color: rgba(45,52,98, .8);
+    background-color: rgba(45,52,98,0.8);
 }
 #nav3 .info-headline,
 #nav3 .info-plus {
